syntax="proto3";

package ai;

option go_package="/ai";

service AiService {
    rpc Tool(ToolReq) returns (ToolResp) {}
}

message ToolReq {
    string content = 1;
    uint32 user_id = 2;
}

message ToolResp {
    string content = 1;
}