syntax = "proto3";

package frontend.checkout;

import "api.proto";
import "frontend/common.proto";

option go_package = "/frontend/checkout";

message CheckoutReq {
  string email = 1 [(api.form) = "email"];
  string firstname = 2 [(api.form) = "firstname"];
  string lastname = 3 [(api.form) = "lastname"];
  string street = 4 [(api.form) = "street"];
  string zipcode = 5 [(api.form) = "zipcode"];
  string province = 6 [(api.form) = "province"];
  string country = 7 [(api.form) = "country"];
  string city = 8 [(api.form) = "city"];
}

service CheckoutService {
  rpc Checkout(common.Empty) returns (common.Empty) {
    option (api.get) = "/checkout";
  }
  rpc CheckoutWaiting(CheckoutReq) returns (common.Empty) {
    option (api.post) = "/checkout";
  }
}