syntax = "proto3";

package frontend.order;

import "api.proto";
import "frontend/common.proto";

option go_package = "/frontend/order";

message CancelOrderReq {
  string order_id = 1[(api.form) = "orderId"];
}

service OrderService {
  rpc OrderList(common.Empty) returns (common.Empty) {
    option (api.get) = "/order";
  }
  rpc CancelOrder(CancelOrderReq) returns (common.Empty) {
    option (api.post) = "/order/cancel";
  }
}